# py-lan-file-server

./: .gitignore  README.md  pyproject.toml
lan_file_server/: __init__.py  cli.py  server.py  ui.py
tests/: test_server.py
